third_party/WebKit/Source/WebCore/bindings/v8/custom/V8WebGLRenderingContextCustom.cpp
@@ -217,10 +217,8 @@ enum ObjectType {
 
 static v8::Handle<v8::Value> getObjectParameter(const v8::Arguments& args, ObjectType objectType)
 {
-    if (args.Length() != 2) {
-        V8Proxy::setDOMException(SYNTAX_ERR, args.GetIsolate());
-        return notHandledByInterceptor();
-    }
+    if (args.Length() != 2)
+        return V8Proxy::throwNotEnoughArgumentsError();
 
     ExceptionCode ec = 0;
     WebGLRenderingContext* context = V8WebGLRenderingContext::toNative(args.Holder());
@@ -271,10 +269,8 @@ v8::Handle<v8::Value> V8WebGLRenderingContext::getAttachedShadersCallback(const 
 {
     INC_STATS("DOM.WebGLRenderingContext.getAttachedShaders()");
 
-    if (args.Length() < 1) {
-        V8Proxy::setDOMException(SYNTAX_ERR, args.GetIsolate());
-        return notHandledByInterceptor();
-    }
+    if (args.Length() < 1)
+        return V8Proxy::throwNotEnoughArgumentsError();
 
     ExceptionCode ec = 0;
     WebGLRenderingContext* context = V8WebGLRenderingContext::toNative(args.Holder());
@@ -307,10 +303,8 @@ v8::Handle<v8::Value> V8WebGLRenderingContext::getExtensionCallback(const v8::Ar
 {
     INC_STATS("DOM.WebGLRenderingContext.getExtensionCallback()");
     WebGLRenderingContext* imp = V8WebGLRenderingContext::toNative(args.Holder());
-    if (args.Length() < 1) {
-        V8Proxy::setDOMException(SYNTAX_ERR, args.GetIsolate());
-        return notHandledByInterceptor();
-    }
+    if (args.Length() < 1)
+        return V8Proxy::throwNotEnoughArgumentsError();
     STRING_TO_V8PARAMETER_EXCEPTION_BLOCK(V8Parameter<>, name, args[0]);
     WebGLExtension* extension = imp->getExtension(name);
     return toV8Object(extension, args.Holder(), args.GetIsolate());
@@ -320,10 +314,8 @@ v8::Handle<v8::Value> V8WebGLRenderingContext::getFramebufferAttachmentParameter
 {
     INC_STATS("DOM.WebGLRenderingContext.getFramebufferAttachmentParameter()");
 
-    if (args.Length() != 3) {
-        V8Proxy::setDOMException(SYNTAX_ERR, args.GetIsolate());
-        return notHandledByInterceptor();
-    }
+    if (args.Length() != 3)
+        return V8Proxy::throwNotEnoughArgumentsError();
 
     ExceptionCode ec = 0;
     WebGLRenderingContext* context = V8WebGLRenderingContext::toNative(args.Holder());
@@ -342,10 +334,8 @@ v8::Handle<v8::Value> V8WebGLRenderingContext::getParameterCallback(const v8::Ar
 {
     INC_STATS("DOM.WebGLRenderingContext.getParameter()");
 
-    if (args.Length() != 1) {
-        V8Proxy::setDOMException(SYNTAX_ERR, args.GetIsolate());
-        return notHandledByInterceptor();
-    }
+    if (args.Length() != 1)
+        return V8Proxy::throwNotEnoughArgumentsError();
 
     ExceptionCode ec = 0;
     WebGLRenderingContext* context = V8WebGLRenderingContext::toNative(args.Holder());
@@ -362,10 +352,8 @@ v8::Handle<v8::Value> V8WebGLRenderingContext::getProgramParameterCallback(const
 {
     INC_STATS("DOM.WebGLRenderingContext.getProgramParameter()");
 
-    if (args.Length() != 2) {
-        V8Proxy::setDOMException(SYNTAX_ERR, args.GetIsolate());
-        return notHandledByInterceptor();
-    }
+    if (args.Length() != 2)
+        return V8Proxy::throwNotEnoughArgumentsError();
 
     ExceptionCode ec = 0;
     WebGLRenderingContext* context = V8WebGLRenderingContext::toNative(args.Holder());
@@ -393,10 +381,8 @@ v8::Handle<v8::Value> V8WebGLRenderingContext::getShaderParameterCallback(const 
 {
     INC_STATS("DOM.WebGLRenderingContext.getShaderParameter()");
 
-    if (args.Length() != 2) {
-        V8Proxy::setDOMException(SYNTAX_ERR, args.GetIsolate());
-        return notHandledByInterceptor();
-    }
+    if (args.Length() != 2)
+        return V8Proxy::throwNotEnoughArgumentsError();
 
     ExceptionCode ec = 0;
     WebGLRenderingContext* context = V8WebGLRenderingContext::toNative(args.Holder());
@@ -438,10 +424,8 @@ v8::Handle<v8::Value> V8WebGLRenderingContext::getUniformCallback(const v8::Argu
 {
     INC_STATS("DOM.WebGLRenderingContext.getUniform()");
 
-    if (args.Length() != 2) {
-        V8Proxy::setDOMException(SYNTAX_ERR, args.GetIsolate());
-        return notHandledByInterceptor();
-    }
+    if (args.Length() != 2)
+        return V8Proxy::throwNotEnoughArgumentsError();
 
     ExceptionCode ec = 0;
     WebGLRenderingContext* context = V8WebGLRenderingContext::toNative(args.Holder());
@@ -511,10 +495,8 @@ static v8::Handle<v8::Value> vertexAttribAndUniformHelperf(const v8::Arguments& 
     // * glVertexAttrib4fv(GLint index, Array data);
     // * glVertexAttrib4fv(GLint index, Float32Array data);
 
-    if (args.Length() != 2) {
-        V8Proxy::setDOMException(SYNTAX_ERR, args.GetIsolate());
-        return notHandledByInterceptor();
-    }
+    if (args.Length() != 2)
+        return V8Proxy::throwNotEnoughArgumentsError();
 
     bool ok = false;
     int index = -1;
@@ -595,10 +577,8 @@ static v8::Handle<v8::Value> uniformHelperi(const v8::Arguments& args,
     // * glUniform4iv(GLUniformLocation location, Array data);
     // * glUniform4iv(GLUniformLocation location, Int32Array data);
 
-    if (args.Length() != 2) {
-        V8Proxy::setDOMException(SYNTAX_ERR, args.GetIsolate());
-        return notHandledByInterceptor();
-    }
+    if (args.Length() != 2)
+        return V8Proxy::throwNotEnoughArgumentsError();
 
     WebGLRenderingContext* context = V8WebGLRenderingContext::toNative(args.Holder());
     if (args.Length() > 0 && !isUndefinedOrNull(args[0]) && !V8WebGLUniformLocation::HasInstance(args[0])) {
@@ -711,10 +691,8 @@ static v8::Handle<v8::Value> uniformMatrixHelper(const v8::Arguments& args,
     // * glUniformMatrix4fv(GLint location, GLboolean transpose, Float32Array data);
     //
     // FIXME: need to change to accept Float32Array as well.
-    if (args.Length() != 3) {
-        V8Proxy::setDOMException(SYNTAX_ERR, args.GetIsolate());
-        return notHandledByInterceptor();
-    }
+    if (args.Length() != 3)
+        return V8Proxy::throwNotEnoughArgumentsError();
 
     WebGLRenderingContext* context = V8WebGLRenderingContext::toNative(args.Holder());
 
